<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Neon Trails Wallpaper</string>
    
    <string name="settings_title">Neon Trails Wallpaper Settings</string>
    
    <string name="title_frames_per_second">Frames per second</string>
    <string name="summary_frames_per_second">Higher frames per second gives a smoother experience but may use up more battery.</string>
    
    <string name="title_line_length">Zoom</string>
    <string name="summary_line_length">Closer zoom draws less trails larger</string>
    
    <string name="title_line_width">Trail thickness</string>
    <string name="summary_line_width">Thickness of the trails</string>
    
    <string name="title_trail_speed">Trail speed</string>
    <string name="summary_trail_speed">How fast the trails move (Slower trails conserve battery and render more smoothly)</string>
    
    <string name="title_color_scheme">Trail colors</string>
    <string name="summary_color_scheme">Color scheme of the trails</string>
</resources>
